Added new folder and data on cdn crime stats

--- a/sequence-alignment/Untitled.ipynb
+++ b/sequence-alignment/Untitled.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.0018954277038574219 seconds ---\n"
+      "--- 0.0009377002716064453 seconds ---\n"
      ]
     }
    ],
@@ -21,9 +21,9 @@
     "seq1 = ['A', 'C', 'T', 'C', 'G']\n",
     "seq2 = ['A', 'C', 'A', 'G', 'T', 'A', 'G']\n",
     "\n",
-    "def initialize(matrix_type):\n",
+    "def initialize(matrix_type, len_seq1, len_seq2):\n",
     "    if matrix_type == 0:\n",
-    "        matrix = np.zeros((len(seq2) + 1, len(seq1) + 1))\n",
+    "        matrix = np.zeros((len_seq2 + 1, len_seq1 + 1))\n",
     "        #First row\n",
     "        for i, cell in enumerate(matrix[0]):\n",
     "            if i != 0:\n",
@@ -35,7 +35,7 @@
     "        matrix[1:,1:] = np.nan\n",
     "        return matrix\n",
     "    else:\n",
-    "        matrix = np.chararray((len(seq2) + 1, len(seq1) + 1), itemsize=2, unicode=True)\n",
+    "        matrix = np.chararray((len_seq2 + 1, len_seq1 + 1), itemsize=2, unicode=True)\n",
     "        matrix[:,:] = 0\n",
     "        for i, cell in enumerate(matrix[0]):\n",
     "            if i != 0:\n",
@@ -46,14 +46,14 @@
     "                matrix[i, 0] = np.float(cell) + (-1 * i)\n",
     "        return matrix\n",
     "    \n",
-    "def find_d_score(diagonol, codon_1, codon_2):\n",
-    "    return diagonol + 1 if codon_1 == codon_2 else diagonol + 0\n",
-    "\n",
-    "find_h_score = lambda left: left + -1\n",
-    "find_v_score = lambda top: top + -1\n",
-    "\n",
     "def find_score(diagonol, left, top, codon_1, codon_2):\n",
     "    result = []\n",
+    "    \n",
+    "    def find_d_score(diagonol, codon_1, codon_2):\n",
+    "        return diagonol + 1 if codon_1 == codon_2 else diagonol + 0\n",
+    "    find_h_score = lambda left: left + -1\n",
+    "    find_v_score = lambda top: top + -1\n",
+    "    \n",
     "    d_score = find_d_score(diagonol, codon_1, codon_2)\n",
     "    h_score = find_h_score(left)\n",
     "    v_score = find_v_score(top)\n",
@@ -61,29 +61,16 @@
     "    score = max(d_score, h_score, v_score)\n",
     "    result.append(score)\n",
     "    if score == d_score:\n",
-    "        result.ap\n",
-    "    elif h_score > v_score:\n",
-    "        return '←'\n",
+    "        result.append('↖')\n",
+    "    elif score == h_score:\n",
+    "        result.append('←')\n",
     "    else:\n",
-    "        return '↑'\n",
+    "        result.append('↑')\n",
     "    \n",
-    "#     print('d: ', d_score, ' h: ', h_score, ' v: ', v_score, ' | score: ', score)\n",
-    "    return score\n",
+    "    return result\n",
     "\n",
-    "def find_direction(diagonol, left, top, codon_1, codon_2):\n",
-    "    d_score = find_d_score(diagonol, codon_1, codon_2)\n",
-    "    h_score = find_h_score(left)\n",
-    "    v_score = find_v_score(top)\n",
-    "\n",
-    "    if d_score > (h_score and v_score):\n",
-    "        return '↖'\n",
-    "    elif h_score > v_score:\n",
-    "        return '←'\n",
-    "    else:\n",
-    "        return '↑'\n",
-    "\n",
-    "score_matrix = initialize(0)\n",
-    "direction_matrix = initialize(1)\n",
+    "score_matrix = initialize(0, len(seq1), len(seq2))\n",
+    "direction_matrix = initialize(1, len(seq1), len(seq2))\n",
     "for i, row in enumerate(score_matrix):\n",
     "    if i != 0:\n",
     "        codon2 = seq2[i - 1]\n",
@@ -93,10 +80,9 @@
     "                vertical = score_matrix[i - 1, j]\n",
     "                horizontal = row[j - 1]\n",
     "                codon1 = seq1[j - 1]\n",
-    "                score = find_score(diaganol, horizontal, vertical, codon1, codon2)\n",
-    "                direction = find_direction(diaganol, horizontal, vertical, codon1, codon2)\n",
-    "                score_matrix[i, j] = score\n",
-    "                direction_matrix[i, j] = direction\n",
+    "                result = find_score(diaganol, horizontal, vertical, codon1, codon2)\n",
+    "                score_matrix[i, j] = result[0]\n",
+    "                direction_matrix[i, j] = result[1]\n",
     "\n",
     "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
@@ -106,7 +92,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0.001692056655883789 seconds\n",
+    "0.0010440349578857422 seconds\n",
+    "0.0009164810180664062 seconds"
+   ]
   }
  ],
  "metadata": {
