--- a/sequence-alignment/experiment_2.ipynb
+++ b/sequence-alignment/experiment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def initialize(matrix_type):\n",
+    "    # For matrix type - Score matrix is 0 & Direction matrix is 1\n",
     "    if matrix_type == 0:\n",
     "        matrix = np.zeros((len(seq2) + 1, len(seq1) + 1))\n",
     "        #First row\n",
@@ -74,7 +75,7 @@
     "    d_score = find_d_score(diagonol, codon_1, codon_2)\n",
     "    h_score = find_h_score(left)\n",
     "    v_score = find_v_score(top)\n",
-    "\n",
+    "    \n",
     "    score = max(d_score, h_score, v_score)\n",
     "#     print('d: ', d_score, ' h: ', h_score, ' v: ', v_score, ' | score: ', score)\n",
     "    return score\n",
